--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $pf-global--enable-font-overpass-cdn: true;
 #root {
   height: 100%;
   background: #f5f5f5;
+  padding: $global-padding;
 }
 
 html, body {
